Fix scrolling behavior on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,4 +4,5 @@
 
 div#__next {
   flex: 1;
+  height: 0;
 }
